@startuml
title FitChasers Weight Tracking System - Class Diagram

skinparam linetype ortho
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam ArrowColor #444
skinparam ClassBorderColor #222
skinparam ClassBackgroundColor #FAFAFA

hide circle
hide stereotype

class WeightManager {
-ui: UI
--
+WeightManager(person: Person)
+addWeight(command: String): void
+viewWeights(): void
-extractBetween(text: String, start: String, end: String): String
-extractAfter(text: String, start: String): String
+isValidWeight(weight: double): boolean
}

class Person {
-ui: UI
-weightHistory: ArrayList<WeightRecord>
--
+addWeightRecord(record: WeightRecord): void
+getWeightHistory(): List<WeightRecord>
+displayWeightHistory(): void
+getLatestWeight(): double
+getWeightHistorySize(): int
+removeLatestWeightRecord(): boolean
+hasWeightRecordOn(date: LocalDate): boolean
+updateWeightRecord(date: LocalDate, newWeight: double): void
+setWeightHistory(history: List<WeightRecord>): void
+displayWeightGraphWithDates(): void
}

class WeightRecord {
-weight: double
-date: LocalDate
--
+WeightRecord(weight: double, date: LocalDate)
+getWeight(): double
+setWeight(weight: double): void
+getDate(): LocalDate
+toString(): String
}

class UI {
-scanner: Scanner
--
+readCommand(): String
+showMessage(message: String): void
+confirmationMessageWithCancel(): Boolean
+readInsideRightBubble(prompt: String): String
}

class FileHandler {
-ui: UI
--
+initIndex(): void
+saveWeightList(person: Person): void
+loadWeightList(person: Person): void
}

' ============== RELATIONSHIPS ==============
' Composition
Person "1" *-- "0..*" WeightRecord

' Aggregation / Dependency
WeightManager o-- Person
WeightManager --> UI
Person --> UI

WeightManager ..> FileHandler
Person ..> FileHandler

' Method calls
WeightManager ..> WeightRecord

@enduml